Working out windows loading of files bug